--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 2px;
     background-color: black;
     width: 35%;
