--- a/src/style.css
+++ b/src/style.css
@@ -5,11 +5,19 @@
     background-color: black;
     width: 35%;
     margin: 15% auto 0 auto
+    
 }
 
 .grid-item {
     aspect-ratio: 1;
     background-color: white;
-    text-align: center;
+    position: relative;
 }
- 
+
+.grid-item > span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    font-size: 3em;
+}
