--- a/src/style.css
+++ b/src/style.css
@@ -21,3 +21,30 @@
     transform: translateY(-50%) translateX(-50%);
     font-size: 3em;
 }
+
+.circle {
+    width: 60%;
+    height: 60%;
+    background-color: white;
+    border-radius: 50%;
+    border: black 2px solid;
+}
+
+.cross {
+    width: 60%;
+}
+
+.cross-line {
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    border-radius: 1px;
+}
+
+.cross-line-a {
+    transform: rotate(45deg);
+}
+
+.cross-line-b {
+    transform: rotate(-45deg);
+}
