--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
     grid-gap: 2px;
     background-color: black;
     width: 35%;
-    margin: 15% auto 0 auto
+    margin: 15% auto 0 auto;
     
 }
 
